--- a/force-app/main/default/classes/OutletTriggerHelper.cls
+++ b/force-app/main/default/classes/OutletTriggerHelper.cls
@@ -2,142 +2,22 @@
 * Description - update's outlet accounts whenever outlet is updated 
 */
 public with sharing class OutletTriggerHelper {
-    public static Boolean outletTriggerFired = false;
-    
-    public void updateRelatedAccount(Map<Id, Outlet__c> newMap, Map<Id, Outlet__c> oldMap, 
-                                                            Map<String, Id> outLetCategoryMap,
-                                                            Map<String, Id> stateIdMap) {
-    
-        List<Account> accountOutlet = new List<Account>();
-        List<Account> li_accountOutlet = new List<Account>();                                                        
-        Id outletRecId = Utilities.getRecordTypeId('Account','Outlet'); 
-        Map<String, Outlet__c> outletMap = new Map<String, Outlet__c>();
-        Set<Id>  outletWithAccounts = new Set<Id>();                                                      
-        
-        for (Outlet__c out : newMap.values()) {
-            if (out.Outlet_My_Sales_Id__c == null) {
-               // System.debug('OutletTriggerHelper updateRelatedAccount Outlet_My_Sales_Id__c'+ out.Outlet_My_Sales_Id__c);
-                return;
-            }
-            String outletMySalesId = string.valueof(out.Outlet_My_Sales_Id__c.round());
-            outletMap.put(outletMySalesId, out);
-        }           
-        accountOutlet = [SELECT id, name, ASM_User_ID__c, BillingStreet, Licence_Class__c, Licence_Number__c,
-                                                        Licence_Type_ID__c, LMAA_Code__c, New_Liquor_Licence_Number__c,
-                                                        Outlet_Category_ID__c, BillingPostalCode, BillingCity,
-                                                        recordtypeid, Outlet_Category__c, State__c, Outlet_ID__c                                                        
-                                                        FROM Account WHERE recordTypeId =: outletRecId 
-                                                        AND Outlet_ID__c IN : outletMap.keySet()];
-        //System.debug('OutletTriggerHelper updateRelatedAccount accountOutlet: '+accountOutlet);
 
-        
-        for (Account acc : accountOutlet) {
-            Outlet__c tempOutlet = new Outlet__c();
-            tempOutlet = outletMap.get(acc.Outlet_ID__c);  
-            //system.debug('tempOutlet Id, Name, OutletId : ' + tempOutlet.Id + ' - ' +tempOutlet.Name + ' - ' + tempOutlet.Outlet_Name__c );
-            String add1  =  tempOutlet.Address_Line_1__c!=null?tempOutlet.Address_Line_1__c:'';      
-            String add2  =  tempOutlet.Address_Line_2__c!=null?tempOutlet.Address_Line_2__c:'';  
-            String post  =  tempOutlet.Post_Code__c!=null?tempOutlet.Post_Code__c:''; 
-            String city  =  tempOutlet.Suburb__c!=null?tempOutlet.Suburb__c:'';
-            
-            acc.name = tempOutlet.Outlet_Name__c.toUpperCase();
-            acc.Licence_Class__c = tempOutlet.Licence_Class__c;
-            acc.Licence_Number__c = tempOutlet.Licence_Number__c;
-            acc.Licence_Type_ID__c = tempOutlet.Licence_Type_ID__c;
-            acc.LMAA_Code__c = tempOutlet.LMAA_Code__c;
-            acc.New_Liquor_Licence_Number__c = tempOutlet.New_Liquor_Licence_Number__c;
-            acc.BillingStreet = add1+''+add2;       
-            acc.BillingPostalCode = post;
-            acc.BillingCity = city;
-            acc.Outlet_Category__c = outLetCategoryMap.get(tempOutlet.Outlet_Category_Id__c);
-            acc.State__c = stateIdMap.get(tempOutlet.State_ID__c);
-            acc.Outlet_ID__c = String.valueOf(Integer.valueOf(outletMap.get(acc.Outlet_ID__c).Outlet_My_Sales_Id__c));
-            acc.Outlet__c = tempoutlet.Id;
-            
-                acc.ASM_User_ID__c = tempOutlet.ASM_User_ID__c;
-                acc.Outlet_Category_ID__c = tempOutlet.Outlet_Category_Id__c;
-                acc.recordtypeid = outletRecId;
-                acc.OwnerId = tempOutlet.OwnerId;
-                acc.Outlet__c = tempOutlet.Id;
-                outletWithAccounts.add(tempOutlet.Id);
-            //system.debug('UpdateAccount Id, Name, OutletId : ' + acc.Id + ' - ' +acc.Name + ' - ' + acc.Outlet_ID__c );
-           
-            li_accountOutlet.add(acc);
-        }
-                                                                
-        for (Outlet__c tempOutlet : newMap.values()) {
-            
-            if(!outletWithAccounts.contains(tempOutlet.Id))
-            {
-                //System.debug('outletWithAccounts  : '+ outletWithAccounts);
-                //System.debug('tempOutlet  : '+ tempOutlet);
-                Account acc = new Account();                     
-                String add1  =  tempOutlet.Address_Line_1__c!=null?tempOutlet.Address_Line_1__c:'';      
-                String add2  =  tempOutlet.Address_Line_2__c!=null?tempOutlet.Address_Line_2__c:'';  
-                String post  =  tempOutlet.Post_Code__c!=null?tempOutlet.Post_Code__c:''; 
-                String city  =  tempOutlet.Suburb__c!=null?tempOutlet.Suburb__c:'';
-            
-            acc.name = tempOutlet.Outlet_Name__c;
-            acc.Licence_Class__c = tempOutlet.Licence_Class__c;
-            acc.Licence_Number__c = tempOutlet.Licence_Number__c;
-            acc.Licence_Type_ID__c = tempOutlet.Licence_Type_ID__c;
-            acc.LMAA_Code__c = tempOutlet.LMAA_Code__c;
-            acc.New_Liquor_Licence_Number__c = tempOutlet.New_Liquor_Licence_Number__c;
-            acc.BillingStreet = add1+''+add2;       
-            acc.BillingPostalCode = post;
-            acc.BillingCity = city;
-            acc.Outlet_Category__c = outLetCategoryMap.get(tempOutlet.Outlet_Category_Id__c);
-            acc.State__c = stateIdMap.get(tempOutlet.State_ID__c);
-            acc.Outlet_ID__c = String.valueOf(Integer.valueOf(tempOutlet.Outlet_My_Sales_Id__c));
-            acc.Outlet__c = tempoutlet.Id;
-            
-                acc.ASM_User_ID__c = tempOutlet.ASM_User_ID__c;
-                acc.Outlet_Category_ID__c = tempOutlet.Outlet_Category_Id__c;
-                acc.recordtypeid = outletRecId;
-                acc.OwnerId = tempOutlet.OwnerId;
-                acc.Outlet__c = tempOutlet.Id;
-                
-            li_accountOutlet.add(acc);
-            //system.debug('acc: ' + acc);
-                
-            }
-                
-        }
+    public static void insertOutlet(Map<Id,Outlet__c> newMap) {
 
-        //System.debug('updateRelatedAccount accountOutlet updated: '+ accountOutlet);
-        System.debug('OutletTriggerHelper updateRelatedAccount accountOutlet updated: '+ li_accountOutlet);
-        //
-        /*
-        if(Test.isRunningTest() && StaticVariableHandler.crashTest) {   Purposely crash test.
-            accounts.values()[0].Id = null;
-        }*/  
-        try {
-            List<Database.upsertResult> uResults = Database.upsert(li_accountOutlet, false);
-            // Iterate through each returned result
-            for (Database.upsertResult sr : uResults) {
-                if (sr.isSuccess()) {
-                    // Operation was successful, so get the ID of the record that was processed
-                  //  System.debug('Successfully inserted/updated account. Account ID: ' + sr.getId());
-                }
-                else {
-                    // Operation failed, so get all errors                
-                    for(Database.Error err : sr.getErrors()) {
-                        System.debug('The following error has occurred.');                    
-                        System.debug(err.getStatusCode() + ': ' + err.getMessage());
-                        System.debug('Account fields that affected this error: ' + err.getFields());
-                    }
-                }           
-            }
-        } catch(Exception e) {
-            System.debug('The following exception has occurred: ' + e.getMessage());
-        }                
     }
 
-    public void updateRelatedStore(Map<Id, Outlet__c> newMap, Map<Id, Outlet__c> oldMap,
-                                   Map<String, Id> outLetCategoryMap, Map<String, Id> stateIdMap) {
+    public static void updateOutlet(Map<Id,Outlet__c> newMap, Map<Id,Outlet__c> oldMap) {
+        
+    }
 
+    public static void updateRelatedStore(Map<Id, Outlet__c> newMap, Map<Id, Outlet__c> oldMap) {
 
+        Id accountId = getParentAccount();
+        List<RetailStore> storesToUpdate = new List<RetailStore>();
+        List<RetailStore> storesToInsert = new List<RetailStore>();
         Map<String, Outlet__c> mapOutletByMSid = new Map<String, Outlet__c>();
+        Map<String, RetailStore> mapStoreByMSid = new Map<String, RetailStore>();
 
         for (Outlet__c outlet : newMap.values()) {
             if (outlet.Outlet_My_Sales_Id__c == null) {
@@ -148,25 +28,94 @@ public with sharing class OutletTriggerHelper {
             }
         }
 
-        List<RetailStore> retailStores = [SELECT Id, Name 
+        List<RetailStore> retailStores = [SELECT Id, Name, ASM_User_ID__c, Street, Licence_Class__c, 
+                                          Licence_Number__c, Licence_Type_ID__c, LMAA_Code__c, 
+                                          New_Liquor_Licence_Number__c, Outlet_Category_ID__c, 
+                                          PostalCode, City, recordtypeid, State, My_Sales_ID__c
                                           FROM RetailStore
                                           WHERE My_Sales_ID__c IN :mapOutletByMSid.keySet()
                                           ];
+        
+        for (RetailStore retailStore : retailStores) {
+            mapStoreByMSid.put(retailStore.My_Sales_ID__c,retailStore);
+        }
+
+        for (Id outletId : newMap.keySet()) {
+            String outletMySalesId = String.valueOf(newMap.get(outletId).Outlet_My_Sales_Id__c.round());
+            //Check for corrosponding retail store
+            if (mapStoreByMSid.containsKey(outletMySalesId)) {
+                Outlet__c oldOutlet = oldMap.get(outletId);
+                Outlet__c newOutlet = newMap.get(outletId);
+                RetailStore storeToUpdate = mapStoreByMSid.get(outletMySalesId);
+
+                //Check for updated Fields
+                if (newOutlet.Outlet_Name__c != oldOutlet.Outlet_Name__c) {
+                    storeToUpdate.Name = newOutlet.Outlet_Name__c;
+                }
+                if (newOutlet.Licence_Class__c != oldOutlet.Licence_Class__c) {
+                    storeToUpdate.Licence_Class__c = newOutlet.Licence_Class__c;
+                }
+                if (newOutlet.Licence_Number__c != oldOutlet.Licence_Number__c) {
+                    storeToUpdate.Licence_Number__c = newOutlet.Licence_Number__c;
+                }
+                if (newOutlet.Licence_Type_ID__c != oldOutlet.Licence_Type_ID__c) {
+                    storeToUpdate.Licence_Type_ID__c = newOutlet.Licence_Type_ID__c;
+                }
+                if (newOutlet.LMAA_Code__c != oldOutlet.LMAA_Code__c) {
+                    storeToUpdate.LMAA_Code__c = newOutlet.LMAA_Code__c;
+                }
+                if (newOutlet.New_Liquor_Licence_Number__c != oldOutlet.New_Liquor_Licence_Number__c) {
+                    storeToUpdate.New_Liquor_Licence_Number__c = newOutlet.New_Liquor_Licence_Number__c;
+                }
+                if (newOutlet.Address_Line_1__c != oldOutlet.Address_Line_1__c ||
+                    newOutlet.Address_Line_2__c != oldOutlet.Address_Line_2__c) {
+                        String add1 = newOutlet.Address_Line_1__c != null ? newOutlet.Address_Line_1__c:'';
+                        String add2 = newOutlet.Address_Line_2__c != null ? newOutlet.Address_Line_2__c:'';
+                        storeToUpdate.Street = add1 + '' + add2;
+                    }
+                if (newOutlet.Post_Code__c != oldOutlet.Post_Code__c) {
+                    String postCode = newOutlet.Post_Code__c != null ? newOutlet.Post_Code__c:'';
+                    storeToUpdate.PostalCode = postCode;
+                }
+                if (newOutlet.Suburb__c != oldOutlet.Suburb__c) {
+                    String city = newOutlet.Suburb__c != null ? newOutlet.Suburb__c:'';
+                    storeToUpdate.City = city;
+                }
+                if (newOutlet.State_Name__c != oldOutlet.State_Name__c) {
+                    storeToUpdate.State = newOutlet.State_Name__c;
+                }
+                if (newOutlet.ASM_User_ID__c != oldOutlet.ASM_User_ID__c) {
+                    storeToUpdate.ASM_User_ID__c = newOutlet.ASM_User_ID__c;
+                }
+                if (newOutlet.OwnerId != oldOutlet.OwnerId) {
+                    storeToUpdate.OwnerId = newOutlet.OwnerId;
+                }
+                storesToUpdate.add(storeToUpdate);
+            } else {
+                //Create a new retail store
+                RetailStore newStore = createNewStore(newMap.get(outletId), accountId);
+                storesToInsert.add(newStore);
+            }
+        }
+        if (storesToUpdate.size() > 0) {
+            Database.SaveResult[] updatedStoreResults = Database.update(storesToUpdate, false);
+        }
+        if (storesToInsert.size() > 0) {
+            Database.SaveResult[] insertStoreResults = Database.insert(storesToInsert, false);
+        }
     }
 
-    public void insertRelatedStore(Map<Id, Outlet__c> newMap, Map<String,Id> stateIdMap,
-                                   Map<String,Id> outLetCategoryMap) {
+    public static void insertRelatedStore(Map<Id, Outlet__c> newMap) {
 
         List<RetailStore> storesToInsert = new List<RetailStore>();
-        Id accountId;                                    
+        Id accountId = getParentAccount();
 
         for (Outlet__c outlet : newMap.values()) {
-            if (outLetCategoryMap.get(outlet.Outlet_Category_Id__c) != null 
-                && stateIdMap.get(outlet.State_ID__c) != null) {
-                    RetailStore newStore = createNewStore(outlet, accountId);
-                    storesToInsert.add(newStore);
-                }
+            RetailStore newStore = createNewStore(outlet, accountId);
+            storesToInsert.add(newStore);
         }
+
+        Database.SaveResult[] newStoreResults = Database.insert(storesToInsert, false);
     }
 
     private Static RetailStore createNewStore(Outlet__c outlet, Id parentId) {
@@ -174,17 +123,20 @@ public with sharing class OutletTriggerHelper {
         String oMySalesId;
         if (outlet.Outlet_My_Sales_Id__c == null) {
             System.debug('Error: Outlet ' + outlet.Name + ' has no My Sales ID.');
+            return null;
         } else {
             oMySalesId = String.valueOf(outlet.Outlet_My_Sales_Id__c.round());
         }
 
+        String storeRecordTypeId = Schema.SObjectType.RetailStore.getRecordTypeInfosByDeveloperName().get('Retail_Store').getRecordTypeId();
         //create address field 
-        String add1  =  otlt.Address_Line_1__c!=null?otlt.Address_Line_1__c:'';
-        String add2  =  otlt.Address_Line_2__c!=null?otlt.Address_Line_2__c:'';  
-        String post  =  otlt.Post_Code__c!=null?otlt.Post_Code__c:''; 
-        String city  =  otlt.Suburb__c!=null?otlt.Suburb__c:'';
+        String add1  =  outlet.Address_Line_1__c!=null?outlet.Address_Line_1__c:'';
+        String add2  =  outlet.Address_Line_2__c!=null?outlet.Address_Line_2__c:'';  
+        String post  =  outlet.Post_Code__c!=null?outlet.Post_Code__c:''; 
+        String city  =  outlet.Suburb__c!=null?outlet.Suburb__c:'';
 
-        RetailStore newStore = new RetailStore(Name = outlet.Name,
+        RetailStore newStore = new RetailStore(Name = outlet.Outlet_Name__c.toUpperCase(),
+                                               RecordTypeId = storeRecordTypeId,
                                                AccountId = parentId,
                                                My_Sales_ID__c = oMySalesId,
                                                ASM_User_ID__c = outlet.ASM_User_ID__c,
@@ -192,17 +144,32 @@ public with sharing class OutletTriggerHelper {
                                                Licence_Number__c = outlet.Licence_Number__c,
                                                Licence_Type_ID__c = outlet.Licence_Type_ID__c,
                                                LMAA_Code__c = outlet.LMAA_Code__c,
-                                               New_Liqour_Licence_Number__c = outlet.New_Liqour_Licence_Number__c,
-                                               Outlet_Category_ID__c = outlet.Outlet_Category_ID__c,
-                                               Street = add1 + ' ' + add2,
+                                               New_Liquor_Licence_Number__c = outlet.New_Liquor_Licence_Number__c,
+                                               Street = add1 + '' + add2,
                                                City = city,
                                                State = outlet.State_Name__c,
                                                PostalCode = outlet.Post_Code__c,
+                                               Country = 'AU',
                                                OwnerId = outlet.OwnerId,
                                                Outlet__c = outlet.Id);
+
         if (String.isBlank(outlet.ASM_User_ID__c)) {
             newStore.Unallocated__c = true;
         }
         return newStore;
+    }
+
+    private static Id getParentAccount() {
+        Id parentId;
+        List<Account> parentAccount = [SELECT Id FROM Account WHERE Name = 'Orphaned Stores'];
+        if (parentAccount.size() == 0) {
+            Account newAccount = new Account(Name = 'Orphaned Stores',
+                                             Active__c = true);
+            insert newAccount;
+            parentId = newAccount.Id;
+        } else {
+            parentId = parentAccount[0].Id;
+        }
+        return parentId;
     }
 }
